--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li><a href="#">Jobs</a></li>
             <li><a href="#">Apprenticeships</a></li>
 
-        </div> </header>
+        </div>  
         <div class="background">
             <div class="image">
                 <div class="ableton">
@@ -499,6 +499,7 @@
                 </div>
 
             </div>
+        </header>
 </body>
 
 </html>
